--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-telegram-bot-api": "^0.54.0",
+    "tinyurl": "^1.1.7"
   }
 }
